// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`manifest vs output: _locales/en/messages.json 1`] = `"{\\"extName\\":{\\"message\\":\\"MV3 with everything\\",\\"description\\":\\"Chrome extension name\\"},\\"extDescription\\":{\\"message\\":\\"MV3 Chrome Extension with all the options.\\",\\"description\\":\\"Chrome extension description\\"}}"`;

exports[`manifest vs output: _locales/es/messages.json 1`] = `"{\\"extName\\":{\\"message\\":\\"MV3 con todo\\"},\\"extDescription\\":{\\"message\\":\\"MV3 Chrome Extension con todo los opciones\\"}}"`;

exports[`manifest vs output: 00 - manifest 1`] = `
Object {
  "background": Object {
    "scripts": Array [
      "background.esm-wrapper.js",
    ],
  },
  "browser_action": Object {
    "default_icon": Object {
      "16": "images/icon-main-16.png",
    },
    "default_popup": "popup/popup.html",
  },
  "content_scripts": Array [
    Object {
      "js": Array [
        "assets/content.esm-wrapper-a6ac6bbe.js",
      ],
      "matches": Array [
        "https://www.google.com/*",
      ],
    },
    Object {
      "css": Array [
        "content.css",
      ],
      "js": Array [
        "assets/content.esm-wrapper-a6ac6bbe.js",
      ],
      "matches": Array [
        "https://www.yahoo.com/*",
      ],
    },
  ],
  "content_security_policy": "script-src 'self'; object-src 'self'",
  "default_locale": "en",
  "description": "mv2-kitchen-sink chrome extension",
  "devtools_page": "devtools/devtools.html",
  "icons": Object {
    "128": "images/icon-main-128.png",
    "16": "images/icon-main-16.png",
    "48": "images/icon-main-48.png",
  },
  "manifest_version": 2,
  "name": "mv2-kitchen-sink",
  "options_page": "options.html",
  "permissions": Array [
    "webRequest",
    "webRequestBlocking",
    "storage",
    "contextMenus",
    "bookmarks",
    "cookies",
  ],
  "version": "1.0.0",
  "web_accessible_resources": Array [
    "content.js",
    "fonts/*.otf",
    "fonts/*.ttf",
    "modules/imported-fc5abad3.js",
    "options.jpg",
  ],
}
`;

exports[`manifest vs output: 01 - files from manifest 1`] = `
Object {
  "CSS": Array [
    "content.css",
  ],
  "HTML": Array [
    "options.html",
    "devtools/devtools.html",
    "popup/popup.html",
  ],
  "IMAGE": Array [
    "images/icon-main-16.png",
    "images/icon-main-48.png",
    "images/icon-main-128.png",
  ],
  "JSON": Array [
    "_locales/**/messages.json",
  ],
  "SCRIPT_BACKGROUND": Array [
    "background.esm-wrapper.js",
  ],
  "SCRIPT_DECLARED": Array [
    "assets/content.esm-wrapper-a6ac6bbe.js",
  ],
}
`;

exports[`manifest vs output: 02 - files from output 1`] = `
Array [
  "_locales/en/messages.json",
  "_locales/es/messages.json",
  "asset.js",
  "assets/content.esm-wrapper-a6ac6bbe.js",
  "background.esm-wrapper.js",
  "background.js",
  "content.css",
  "content.js",
  "devtools/devtools.html",
  "devtools/devtools1.js",
  "devtools/devtools2.js",
  "images/favicon.ico",
  "images/favicon.png",
  "images/icon-main-128.png",
  "images/icon-main-16.png",
  "images/icon-main-48.png",
  "manifest.json",
  "modules/imported-fc5abad3.js",
  "options.css",
  "options.html",
  "options.jpg",
  "options.png",
  "options1.js",
  "options2.js",
  "options3.js",
  "options4.js",
  "popup/popup.html",
  "popup/popup.js",
]
`;

exports[`manifest vs output: 03 - manifest files match output 1`] = `
Object {
  "assets/content.esm-wrapper-a6ac6bbe.js": true,
  "background.esm-wrapper.js": true,
  "content.css": true,
  "devtools/devtools.html": true,
  "images/icon-main-128.png": true,
  "images/icon-main-16.png": true,
  "images/icon-main-48.png": true,
  "options.html": true,
  "popup/popup.html": true,
}
`;

exports[`manifest vs output: assets/content.esm-wrapper-a6ac6bbe.js 1`] = `
"(function () {
  'use strict';

  const importPath = \\"content.js\\";

  const url = chrome.runtime.getURL(importPath);
  import(
    /* @vite-ignore */
    url
  ).catch((err) => {
    console.warn(\`Could not import \${importPath} from \${chrome.runtime.getManifest().name}\`);
    console.error(err);
  });

})();
"
`;

exports[`manifest vs output: background.esm-wrapper.js 1`] = `
"(function () {
  'use strict';

  function getDeepMatches(object, pred, excludeKeys) {
    const keys = typeof object === \\"object\\" && object ? Object.keys(object) : [];
    return keys.length ? keys.filter((key) => !excludeKeys.includes(key)).reduce((r, key) => {
      const target = object[key];
      if (target && pred(target)) {
        return [...r, target];
      } else {
        return [
          ...r,
          ...getDeepMatches(target, pred, excludeKeys)
        ];
      }
    }, []) : [];
  }

  const importPath = \\"./background.js\\";

  const events = getDeepMatches(chrome, (x) => typeof x === \\"object\\" && \\"addListener\\" in x, [\\"webRequest\\", \\"extension\\"]);
  const triggerEvents = captureEvents(events);
  import(importPath).then(async () => {
    triggerEvents();
  });
  function captureEvents(events2) {
    const captured = events2.map(captureEvent);
    return () => captured.forEach((t) => t());
    function captureEvent(event) {
      let isCapturePhase = true;
      const callbacks = /* @__PURE__ */ new Map();
      const eventArgs = /* @__PURE__ */ new Set();
      event.addListener(handleEvent);
      function handleEvent(...args) {
        if (isCapturePhase) {
          eventArgs.add(args);
          if (typeof args[2] === \\"function\\") {
            return true;
          } else {
            return false;
          }
        } else {
          return callListeners(...args);
        }
      }
      function callListeners(...args) {
        let isAsyncCallback = false;
        callbacks.forEach((options, cb) => {
          try {
            isAsyncCallback = cb(...args) || isAsyncCallback;
          } catch (error) {
            console.error(error);
          }
        });
        if (!isAsyncCallback && typeof args[2] === \\"function\\") {
          args[2]();
        }
        return isAsyncCallback;
      }
      function triggerEvents2() {
        eventArgs.forEach((args) => {
          callListeners(...args);
        });
        isCapturePhase = false;
        eventArgs.clear();
      }
      event.addListener = function addListener(cb, ...options) {
        callbacks.set(cb, options);
      };
      event.hasListeners = function hasListeners() {
        return callbacks.size > 0;
      };
      event.hasListener = function hasListener(cb) {
        return callbacks.has(cb);
      };
      event.removeListener = function removeListener(cb) {
        callbacks.delete(cb);
      };
      event.__isCapturedEvent = true;
      return triggerEvents2;
    }
  }

})();
"
`;

exports[`manifest vs output: background.js 1`] = `
"import { x } from './modules/imported-fc5abad3.js';

console.log(x);
console.log(\\"background.js\\");
chrome.storage.local.clear();
"
`;

exports[`manifest vs output: content.css 1`] = `
"body {
    color: blueviolet;
  }
  "
`;

exports[`manifest vs output: content.js 1`] = `
"import { x } from './modules/imported-fc5abad3.js';

console.log(x);
console.log(\\"content.js\\");
chrome.contextMenus.removeAll();
"
`;

exports[`manifest vs output: devtools/devtools.html 1`] = `
"<!DOCTYPE html><html><head>
	<script src=\\"devtools2.js\\" type=\\"module\\"></script>
	<script src=\\"devtools1.js\\" type=\\"module\\"></script>
</head>
<body>
</body></html>"
`;

exports[`manifest vs output: devtools/devtools1.js 1`] = `
"const message = \\"devtools.ts\\";
console.log(message);

export { message };
"
`;

exports[`manifest vs output: devtools/devtools2.js 1`] = `
"import { x } from '../modules/imported-fc5abad3.js';

console.log(x);
console.log(\\"background.js\\");
chrome.storage.local.clear();
"
`;

exports[`manifest vs output: modules/imported-fc5abad3.js 1`] = `
"const x = \\"x\\";

export { x };
"
`;

exports[`manifest vs output: options.css 1`] = `
"body {
    color: red;
  }
  "
`;

exports[`manifest vs output: options.html 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
    <title>Options</title>
    <link rel=\\"stylesheet\\" href=\\"options.css\\">
    <link rel=\\"icon\\" href=\\"images/favicon.png\\">
  </head>

  <body>
    <!-- Script chunks: to bundle -->
    <script src=\\"./options1.js\\" type=\\"module\\"></script>
    <script src=\\"./options2.js\\" type=\\"module\\"></script>
    <script src=\\"./options3.js\\" type=\\"module\\"></script>
    <script src=\\"./options4.js\\" type=\\"module\\"></script>
    <!-- Image assets -->
    <img src=\\"./options.png\\">
    <img src=\\"./options.jpg\\">
    <!-- Script asset: do not bundle -->
    <script src=\\"./asset.js\\" data-rollup-asset=\\"true\\"></script>
  

</body></html>"
`;

exports[`manifest vs output: options1.js 1`] = `
"console.log(\\"options1.js\\");
chrome.bookmarks.get(\\"main\\");
"
`;

exports[`manifest vs output: options2.js 1`] = `
"console.log(\\"options2.jsx\\");
chrome.cookies.getAll();
"
`;

exports[`manifest vs output: options3.js 1`] = `
"console.log(\\"options3.ts\\");
"
`;

exports[`manifest vs output: options4.js 1`] = `
"console.log(\\"options4.tsx\\");
"
`;

exports[`manifest vs output: popup/popup.html 1`] = `
"<!DOCTYPE html><html lang=\\"en\\"><head>
    <meta charset=\\"UTF-8\\">
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1.0\\">
    <meta http-equiv=\\"X-UA-Compatible\\" content=\\"ie=edge\\">
    <link rel=\\"icon\\" href=\\"/images/favicon.ico\\">
    <title>Popup</title>
  </head>

  <body>
    <script src=\\"popup.js\\" type=\\"module\\"></script>
  

</body></html>"
`;

exports[`manifest vs output: popup/popup.js 1`] = `
"console.log(\\"popup.js\\");
"
`;
